--- a/package.json
+++ b/package.json
@@ -13,9 +13,19 @@
     "@babel/plugin-proposal-class-properties": "^7.10.1",
     "@babel/preset-env": "^7.10.3",
     "@babel/preset-react": "^7.10.1",
+    "babel-loader": "8.0.2",
+    "css-loader": "1.0.0",
     "eslint": "^4.18.2",
     "js-yaml": "^3.13.1",
+    "style-loader": "0.23.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack-dev-server": "^3.1.11"
+    "webpack": "4.19.1",
+    "webpack-cli": "3.1.1",
+    "webpack-dev-server": "3.1.8"
+  },
+  "scripts": {
+    "start": "webpack-dev-server --inline --mode development --open"
   }
 }
+
+
